--- a/frontend/src/styles/sass/button.sass
+++ b/frontend/src/styles/sass/button.sass
@@ -8,6 +8,16 @@
     color: global.$red !important
     background-color: global.$white !important
 
+
+.white-inverse
+    background-color: global.$white !important
+    color: global.$red !important
+
+.white-inverse:hover
+    color: global.$white !important
+    background-color: global.$red !important
+
+
 .btn
     font-size: 3rem !important
     width: 30vw
