--- a/frontend/src/styles/sass/landingPage.sass
+++ b/frontend/src/styles/sass/landingPage.sass
@@ -15,10 +15,9 @@
     width: 100%
 
 .heading
-    font-family: 'Eczar', serif
     font-size: 10rem
     font-weight: 400
-    color: global.$white
+    color: global.$red
     margin: 1rem
 
     p   
