--- a/frontend/src/styles/sass/_global.sass
+++ b/frontend/src/styles/sass/_global.sass
@@ -12,3 +12,12 @@ $blue: #00f
     align-items: center
     flex-direction: column
 
+.link
+    text-decoration: none
+
+body
+    font-family: 'Eczar', serif
+
+.box
+    margin: 0 1rem
+    padding: 1rem 0
