--- a/frontend/src/styles/icon.css
+++ b/frontend/src/styles/icon.css
@@ -1,11 +1,3 @@
-.container {
-  display: flex !important;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
 .link {
   text-decoration: none;
 }
@@ -14,14 +6,13 @@ body {
   font-family: "Eczar", serif;
 }
 
-.box {
-  margin: 0 1rem;
-  padding: 1rem 0;
-}
-
 .icon {
   color: red;
   margin: 0 2rem;
+}
+
+.caret {
+  color: #000;
 }
 
 /*# sourceMappingURL=icon.css.map */
