--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -1,6 +1,30 @@
 @use "_global.sass" as global
 
+.container
+    display: flex !important
+    height: 100vh
+    justify-content: center
+    align-items: center
+    flex-direction: column
+
+.box
+    margin: 0 1rem
+    padding: 1rem 0
+
 .nav-items
     display: flex
     flex-grow: 1
     justify-content: flex-end
+
+.carousel
+    margin: 3rem 0
+    height: 30vh
+
+#featuredContainer
+    display: flex !important
+    height: 25vh
+
+.carousel-card
+    width: 100%
+    height: 100%
+    margin: 0 3rem
