--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -18,13 +18,16 @@
 
 .carousel
     margin: 3rem 0
-    height: 30vh
-
+    height: 60vh
+    
 #featuredContainer
     display: flex !important
-    height: 25vh
+    height: 40vh
 
 .carousel-card
     width: 100%
     height: 100%
     margin: 0 3rem
+    text-align: center
+    border: 1px solid global.$black
+    box-shadow: 2px 4px 4px -4px global.$red !important
