--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -27,18 +27,21 @@ body {
 
 .carousel {
   margin: 3rem 0;
-  height: 30vh;
+  height: 60vh;
 }
 
 #featuredContainer {
   display: flex !important;
-  height: 25vh;
+  height: 40vh;
 }
 
 .carousel-card {
   width: 100%;
   height: 100%;
   margin: 0 3rem;
+  text-align: center;
+  border: 1px solid #000;
+  box-shadow: 2px 4px 4px -4px #f00 !important;
 }
 
 /*# sourceMappingURL=mui.css.map */
