--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -1,6 +1,6 @@
 @use "_global.sass" as global
 
-.container
+.landingPageContainer
     display: flex !important
     height: 100vh
     justify-content: center
@@ -18,7 +18,7 @@
 
 .carousel
     margin: 3rem 0
-    height: 60vh
+    height: 50vh
     
 #featuredContainer
     display: flex !important
