--- a/frontend/src/styles/sass/button.sass
+++ b/frontend/src/styles/sass/button.sass
@@ -17,6 +17,9 @@
     color: global.$white !important
     background-color: global.$red !important
 
+.no-background, .no-background:hover
+    background-color: global.$white !important
+
 
 .btn
     font-size: 3rem !important
