--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -24,6 +24,10 @@
     display: flex !important
     height: 40vh
 
+.carousel-card-btn
+    width: 100%
+    height: 100%
+
 .carousel-card
     width: 100%
     height: 100%
