--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -35,6 +35,11 @@ body {
   height: 40vh;
 }
 
+.carousel-card-btn {
+  width: 100%;
+  height: 100%;
+}
+
 .carousel-card {
   width: 100%;
   height: 100%;
