--- a/frontend/src/styles/sass/navbar.sass
+++ b/frontend/src/styles/sass/navbar.sass
@@ -17,6 +17,9 @@
     color: global.$red !important
     font-size: 1.5rem !important
 
+.nav-items
+    @include global.flex($justify-content: flex-end, $align-items: center, $grow: 1)
+
 #cart-total
     margin: 0
     margin-left: 0.5rem
