--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -8,21 +8,16 @@ body {
 
 .landingPageContainer {
   display: flex !important;
-  height: 100vh;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-grow: 0;
+  height: 100vh;
 }
 
 .box {
   margin: 0 1rem;
   padding: 1rem 0;
-}
-
-.nav-items {
-  display: flex;
-  flex-grow: 1;
-  justify-content: flex-end;
 }
 
 .carousel {
@@ -38,12 +33,12 @@ body {
 .carousel-card-btn {
   width: 100%;
   height: 100%;
+  margin: 0 3rem !important;
 }
 
 .carousel-card {
   width: 100%;
   height: 100%;
-  margin: 0 3rem;
   text-align: center;
   border: 1px solid #000;
   box-shadow: 2px 4px 4px -4px #f00 !important;
