--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -27,6 +27,14 @@ body {
   font-size: 1.5rem !important;
 }
 
+.nav-items {
+  display: flex !important;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  flex-grow: 1;
+}
+
 #cart-total {
   margin: 0;
   margin-left: 0.5rem;
