--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -1,20 +1,12 @@
 @use "_global.sass" as global
 
 .landingPageContainer
-    display: flex !important
+    @include global.flex($direction: column, $justify-content: center, $align-items: center)
     height: 100vh
-    justify-content: center
-    align-items: center
-    flex-direction: column
 
 .box
     margin: 0 1rem
     padding: 1rem 0
-
-.nav-items
-    display: flex
-    flex-grow: 1
-    justify-content: flex-end
 
 .carousel
     margin: 3rem 0
@@ -27,11 +19,11 @@
 .carousel-card-btn
     width: 100%
     height: 100%
+    margin: 0 3rem !important
 
 .carousel-card
     width: 100%
     height: 100%
-    margin: 0 3rem
     text-align: center
     border: 1px solid global.$black
     box-shadow: 2px 4px 4px -4px global.$red !important
