--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -30,6 +30,12 @@ body {
   padding: 0 !important;
 }
 
+.carousel-card-btn {
+  width: 100%;
+  height: 100%;
+  margin: 0 3rem !important;
+}
+
 .btn:focus {
   outline: none;
   box-shadow: none;
