--- a/frontend/src/styles/sass/button.sass
+++ b/frontend/src/styles/sass/button.sass
@@ -17,7 +17,11 @@
 .btn
     padding: 0 !important
 
+.carousel-card-btn
+    width: 100%
+    height: 100%
+    margin: 0 3rem !important
+
 .btn:focus
     outline: none
     box-shadow: none
-
