--- a/frontend/src/styles/sass/shopPage.sass
+++ b/frontend/src/styles/sass/shopPage.sass
@@ -3,3 +3,8 @@
 h3
     font-size: 4rem !important
     color: global.$red
+
+.category-toggle
+    @include global.flex($justify-content: flex-end)
+    margin-bottom: 1rem
+    
