--- a/frontend/src/styles/icon.css
+++ b/frontend/src/styles/icon.css
@@ -6,6 +6,10 @@ body {
   font-family: "Eczar", serif;
 }
 
+h2, h3, h4, h5, h6, p {
+  font-family: "Inter", sans-serif;
+}
+
 .icon {
   color: #f00;
   margin: 0 2rem;
