--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -6,6 +6,10 @@ body {
   font-family: "Eczar", serif;
 }
 
+h2, h3, h4, h5, h6, p {
+  font-family: "Inter", sans-serif;
+}
+
 .landingPageContainer {
   display: flex !important;
   flex-direction: column;
@@ -34,8 +38,29 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
-  border: 1px solid #000;
+  border: 1px solid #000 !important;
   box-shadow: 2px 4px 4px -4px #f00 !important;
+}
+
+.toggle-group {
+  justify-content: flex-end;
+}
+
+.grid-item {
+  padding-top: 0 !important;
+}
+
+.grid {
+  margin: 3rem 0 !important;
+}
+
+.list-item {
+  font-size: 2rem;
+  font-family: "Eczar", serif;
+}
+
+.menu-item-title {
+  margin: 0 !important;
 }
 
 /*# sourceMappingURL=mui.css.map */
