--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -6,6 +6,10 @@ body {
   font-family: "Eczar", serif;
 }
 
+h2, h3, h4, h5, h6, p {
+  font-family: "Inter", sans-serif;
+}
+
 .navbar-brand h1 {
   display: inline !important;
   color: #f00;
