--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -20,5 +20,21 @@
     width: 100%
     height: 100%
     text-align: center
-    border: 1px solid global.$black
+    @include global.border()
     box-shadow: 2px 4px 4px -4px global.$red !important
+
+.toggle-group
+    justify-content: flex-end
+
+.grid-item
+    padding-top: 0 !important
+
+.grid
+    margin: 3rem 0 !important
+
+.list-item
+    font-size: 2rem 
+    font-family: 'Eczar', serif
+
+.menu-item-title
+    margin: 0 !important
