add outlet to navbar

--- a/frontend/src/styles/icon.css
+++ b/frontend/src/styles/icon.css
@@ -10,6 +10,10 @@ h2, h3, h4, h5, h6, p {
   font-family: "Inter", sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .icon {
   color: #f00;
   margin: 0 2rem;
