--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -28,9 +28,10 @@
 
 .grid-item
     padding-top: 0 !important
+    padding-left: 1rem !important
 
 .grid
-    margin: 3rem 0 !important
+    margin: 2rem 0 !important
 
 .list-item
     font-size: 2rem 
