--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -10,6 +10,10 @@ h2, h3, h4, h5, h6, p {
   font-family: "Inter", sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .nav-items {
   display: flex;
   flex-grow: 1;
