--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -10,6 +10,10 @@ h2, h3, h4, h5, h6, p {
   font-family: "Inter", sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .white-inverse {
   background-color: #fff !important;
   color: #f00 !important;
