--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -10,6 +10,10 @@ h2, h3, h4, h5, h6, p {
   font-family: "Inter", sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .navbar-brand h1 {
   display: inline !important;
   color: #f00;
