--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -1,6 +1,7 @@
 @use "_global.sass" as global
 
-.nav-items
-    display: flex
-    flex-grow: 1
-    justify-content: flex-end
+.box
+    padding: 1rem 0
+
+.header
+    text-align: center
