move toggle button to grid component

--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -12,12 +12,13 @@
     display: flex !important
     height: 40vh
 
-.carousel-card
+.card
     width: 100%
     height: 100%
     text-align: center
     @include global.border()
     box-shadow: 2px 4px 4px -4px global.$red !important
+    margin: 1rem 0
 
 .toggle-group
     justify-content: flex-end
