--- a/frontend/src/styles/sass/shopPage.sass
+++ b/frontend/src/styles/sass/shopPage.sass
@@ -5,6 +5,6 @@ h3
     color: global.$red
 
 .category-toggle
-    @include global.flex($justify-content: flex-end)
+    @include global.flex($justify-content: flex-end, $grow: 1)
     margin-bottom: 1rem
     
