--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -33,12 +33,13 @@ a {
   height: 40vh;
 }
 
-.carousel-card {
+.card {
   width: 100%;
   height: 100%;
   text-align: center;
   border: 1px solid #000 !important;
   box-shadow: 2px 4px 4px -4px #f00 !important;
+  margin: 1rem 0;
 }
 
 .toggle-group {
