add routing to item page

--- a/frontend/src/styles/sass/button.sass
+++ b/frontend/src/styles/sass/button.sass
@@ -14,17 +14,17 @@
     width: 30vw
     border-radius: 10% !important
 
-.btn
+.no-btn-padding
     padding: 0 !important
+
+.no-btn-padding:focus
+    outline: none
+    box-shadow: none
 
 .carousel-card-btn
     width: 100%
     height: 100%
     margin: 0 3rem !important
-
-.btn:focus
-    outline: none
-    box-shadow: none
 
 .category-list-btn
     width: 100%
