--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -34,19 +34,19 @@ a {
   border-radius: 10% !important;
 }
 
-.btn {
+.no-btn-padding {
   padding: 0 !important;
+}
+
+.no-btn-padding:focus {
+  outline: none;
+  box-shadow: none;
 }
 
 .carousel-card-btn {
   width: 100%;
   height: 100%;
   margin: 0 3rem !important;
-}
-
-.btn:focus {
-  outline: none;
-  box-shadow: none;
 }
 
 .category-list-btn {
