refactor grid to take any link

--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -49,7 +49,7 @@ a {
   margin: 0 3rem !important;
 }
 
-.category-list-btn {
+.grid-list-btn {
   width: 100%;
   border: 1px solid #000 !important;
 }
