--- a/frontend/src/styles/sass/button.sass
+++ b/frontend/src/styles/sass/button.sass
@@ -26,7 +26,7 @@
     height: 100%
     margin: 0 3rem !important
 
-.category-list-btn
+.grid-list-btn
     width: 100%
     @include global.border()
     
