--- a/frontend/src/styles/shopPage.css
+++ b/frontend/src/styles/shopPage.css
@@ -19,7 +19,7 @@ h3 {
   color: #f00;
 }
 
-.category-toggle {
+.grid-toggle {
   display: flex !important;
   flex-direction: row;
   justify-content: flex-end;
