--- a/frontend/src/styles/sass/shopPage.sass
+++ b/frontend/src/styles/sass/shopPage.sass
@@ -4,7 +4,7 @@ h3
     font-size: 4rem !important
     color: global.$red
 
-.category-toggle
+.grid-toggle
     @include global.flex($justify-content: flex-end, $grow: 1)
     margin-bottom: 1rem
     
