--- a/frontend/src/styles/sass/button.sass
+++ b/frontend/src/styles/sass/button.sass
@@ -29,4 +29,12 @@
 .grid-list-btn
     width: 100%
     @include global.border()
-    
+
+.big-btn
+    font-size: 2rem !important
+
+.black
+    color: global.$black !important
+
+.no-padding
+    padding: 0 !important
