--- a/frontend/src/styles/sass/icon.sass
+++ b/frontend/src/styles/sass/icon.sass
@@ -3,5 +3,9 @@
     color: global.$red
     margin: 0 2rem
 
+.small-icon
+    color: global.$black
+    margin: 0 0.5rem
+
 .caret 
     color: global.$black
