--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -22,4 +22,26 @@ a {
   text-align: center;
 }
 
+.flex-container {
+  display: flex !important;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-grow: 0;
+  height: 100vh;
+}
+
+.right-align {
+  display: flex !important;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-grow: 1;
+}
+
+.small-box {
+  width: 80%;
+  margin-top: 2rem;
+}
+
 /*# sourceMappingURL=box.css.map */
