--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -14,6 +14,10 @@ a {
   text-decoration: none;
 }
 
+.full-height {
+  height: 100%;
+}
+
 .box {
   padding: 1rem 0;
 }
@@ -42,6 +46,21 @@ a {
 .small-box {
   width: 80%;
   margin-top: 2rem;
+}
+
+.price-box {
+  text-align: center;
+  margin: 10% 0;
+  height: 80%;
+}
+
+.grey-background {
+  background-color: #F4F6F9;
+}
+.grey-background p {
+  text-align: left;
+  margin: 2rem;
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=box.css.map */
