--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -14,6 +14,10 @@ a {
   text-decoration: none;
 }
 
+.full-height {
+  height: 100%;
+}
+
 .white-inverse {
   background-color: #fff !important;
   color: #f00 !important;
