--- a/frontend/src/styles/item.css
+++ b/frontend/src/styles/item.css
@@ -14,6 +14,10 @@ a {
   text-decoration: none;
 }
 
+.full-height {
+  height: 100%;
+}
+
 .flex-child {
   flex: 1 !important;
 }
@@ -38,11 +42,6 @@ a {
   color: #f00;
 }
 
-.price-box {
-  text-align: center;
-  margin: 10% 0;
-}
-
 .decimal-cost {
   vertical-align: top;
   font-size: 2.5rem;
@@ -51,15 +50,6 @@ a {
 .small-plus {
   vertical-align: top;
   font-size: 1.5rem;
-}
-
-.item-purchase-details {
-  background-color: #F4F6F9;
-}
-.item-purchase-details p {
-  text-align: left;
-  margin: 2rem;
-  font-weight: 700;
 }
 
 /*# sourceMappingURL=item.css.map */
