--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -10,10 +10,22 @@
     @include global.flex()
     height: 100vh
 
-
 .right-align
     @include global.flex($justify-content: flex-end, $grow: 1)
 
 .small-box
     width: 80%
     margin-top: 2rem
+
+.price-box
+    text-align: center
+    margin: 10% 0
+    height: 80%
+
+.grey-background
+    background-color: global.$grey
+
+    p
+        text-align: left
+        margin: 2rem
+        font-weight: 700
