--- a/frontend/src/styles/landingPage.css
+++ b/frontend/src/styles/landingPage.css
@@ -18,6 +18,10 @@ a {
   height: 100%;
 }
 
+.no-bottom-padding {
+  padding-bottom: 0;
+}
+
 #landingPage {
   background-image: url("https://t3.ftcdn.net/jpg/02/58/32/94/360_F_258329401_MCy6WUBkklTARuBbYRwENqDYE9ssYrZk.jpg");
   height: 100vh;
