--- a/frontend/src/styles/sass/_global.sass
+++ b/frontend/src/styles/sass/_global.sass
@@ -4,6 +4,7 @@ $red: #f00
 $green: #0f0
 $blue: #00f
 $grey: #F4F6F9
+$orange: #f7bd00
 
 @mixin inverse($bgColor: #fff, $color: #000)
     background-color: $bgColor !important
@@ -39,3 +40,6 @@ a
 
 .full-height 
     height: 100%
+
+.no-bottom-padding
+    padding-bottom: 0
