--- a/frontend/src/styles/sass/item.sass
+++ b/frontend/src/styles/sass/item.sass
@@ -13,8 +13,8 @@
     @include global.box-shadow($horizontalOffset: 0px, $vertialOffset: 8px, $color: global.$black)
 
 .item-desc
-    margin: 2rem 0
     font-size: 1.5rem
+    text-align: center
 
 .red-header
     color: global.$red
