--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -18,6 +18,10 @@ a {
   height: 100%;
 }
 
+.no-bottom-padding {
+  padding-bottom: 0;
+}
+
 .landingPageContainer {
   display: flex !important;
   flex-direction: column;
