--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -18,6 +18,10 @@ a {
   height: 100%;
 }
 
+.no-bottom-padding {
+  padding-bottom: 0;
+}
+
 .navbar-brand h1 {
   display: inline !important;
   color: #f00;
