--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -8,7 +8,6 @@
 
 .flex-container
     @include global.flex()
-    height: 100vh
 
 .right-align
     @include global.flex($justify-content: flex-end, $grow: 1)
@@ -20,7 +19,7 @@
 .price-box
     text-align: center
     margin: 10% 0
-    height: 80%
+    height: auto
 
 .grey-background
     background-color: global.$grey
