--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -1,5 +1,10 @@
 @use "_global.sass" as global
 
+.landingPage
+    background-image: url("https://t3.ftcdn.net/jpg/02/58/32/94/360_F_258329401_MCy6WUBkklTARuBbYRwENqDYE9ssYrZk.jpg")
+    height: 100vh
+    background-size: cover
+
 .box
     padding: 1rem 0
 
@@ -28,3 +33,14 @@
         text-align: left
         margin: 2rem
         font-weight: 700
+
+.modal-box
+    position: 'absolute',
+    top: '50%',
+    left: '50%',
+    transform: 'translate(-50%, -50%)',
+    width: 400,
+    bgcolor: 'background.paper',
+    border: '2px solid #000',
+    boxShadow: 24,
+    p: 4,
