--- a/frontend/src/styles/sass/_global.sass
+++ b/frontend/src/styles/sass/_global.sass
@@ -23,7 +23,7 @@ $orange: #f7bd00
 @mixin border($size: 1px, $type: solid, $color: $black)
     border: $size $type $color !important
 
-@mixin box-shadow($horizontalOffset: 2px, $vertialOffset: 2px, $blur: 4px, $spread: -4px, $color: global.$black)
+@mixin box-shadow($horizontalOffset: 2px, $vertialOffset: 2px, $blur: 4px, $spread: -4px, $color: $black)
     box-shadow: $horizontalOffset $vertialOffset $blur $spread $color !important
 
 .link
