--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -22,7 +22,11 @@ a {
   padding-bottom: 0;
 }
 
-.landingPageContainer {
+.inline-display {
+  display: inline;
+}
+
+.full-height-container {
   display: flex !important;
   flex-direction: column;
   justify-content: center;
