--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -1,6 +1,6 @@
 @use "_global.sass" as global
 
-.landingPageContainer
+.full-height-container
     @include global.flex($direction: column, $justify-content: center, $align-items: center)
     height: 100vh
 
