--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -22,10 +22,8 @@ a {
   padding-bottom: 0;
 }
 
-.landingPage {
-  background-image: url("https://t3.ftcdn.net/jpg/02/58/32/94/360_F_258329401_MCy6WUBkklTARuBbYRwENqDYE9ssYrZk.jpg");
-  height: 100vh;
-  background-size: cover;
+.inline-display {
+  display: inline;
 }
 
 .box {
