--- a/frontend/src/styles/image.css
+++ b/frontend/src/styles/image.css
@@ -22,6 +22,10 @@ a {
   padding-bottom: 0;
 }
 
+.inline-display {
+  display: inline;
+}
+
 .modal-image {
   display: inline !important;
   object-fit: fill;
