refactor landing page

--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -40,7 +40,7 @@ a {
   background-color: #fff !important;
 }
 
-.landingPageBtn {
+.xl-button {
   font-size: 3rem !important;
   width: 30vw;
   border-radius: 5% !important;
