--- a/frontend/src/styles/sass/button.sass
+++ b/frontend/src/styles/sass/button.sass
@@ -10,7 +10,7 @@ $large-button-text: 3rem
 .no-background, .no-background:hover
     background-color: global.$white !important
 
-.landingPageBtn
+.xl-button
     font-size: $large-button-text !important
     @include global.width(30vw)
     @include global.border-radius(5%)
