--- a/frontend/src/styles/sass/text.sass
+++ b/frontend/src/styles/sass/text.sass
@@ -1,7 +1,12 @@
 @use "_global.sass" as global
 
 $xl-text: 10rem
+$header-text-size: 4rem
 
 .red-text-xl
     color: global.$red
     font-size: $xl-text !important
+
+.divider-header
+    font-size: $header-text-size !important
+    color: global.$red
