--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -1,3 +1,11 @@
+.default-border {
+  border: 1px solid #000 !important;
+}
+
+.max-width {
+  width: 100%;
+}
+
 .link {
   text-decoration: none;
 }
@@ -24,6 +32,15 @@ a {
 
 .inline-display {
   display: inline;
+}
+
+.left-align-box {
+  display: flex !important;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-grow: 1;
+  margin-bottom: 1rem;
 }
 
 .box {
