--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -1,3 +1,11 @@
+.default-border {
+  border: 1px solid #000 !important;
+}
+
+.max-width {
+  width: 100%;
+}
+
 .link {
   text-decoration: none;
 }
@@ -35,14 +43,13 @@ a {
   height: 100vh;
 }
 
-.carousel {
-  margin: 3rem 0;
-  height: 45vh;
-}
-
-#featuredContainer {
+.featuredContainer {
   display: flex !important;
   height: 40vh;
+}
+
+.featured-link {
+  width: 90%;
 }
 
 .card {
@@ -54,30 +61,9 @@ a {
   margin: 1rem 0;
 }
 
-.toggle-group {
-  justify-content: flex-end;
-}
-
-.grid-item {
-  padding-top: 0 !important;
-  padding-left: 1rem !important;
-}
-
-.grid {
-  margin: 2rem 0 !important;
-}
-
 .list-item {
   font-size: 2rem;
   font-family: "Eczar", serif;
-}
-
-.menu-item-title {
-  margin: 0 !important;
-}
-
-.featured-link {
-  width: 90%;
 }
 
 /*# sourceMappingURL=mui.css.map */
