--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -1,3 +1,11 @@
+.default-border {
+  border: 1px solid #000 !important;
+}
+
+.max-width {
+  width: 100%;
+}
+
 .link {
   text-decoration: none;
 }
@@ -58,6 +66,10 @@ a {
 #cart-total {
   margin: 0;
   margin-left: 0.5rem;
+}
+
+.menu-item-title {
+  margin: 0 !important;
 }
 
 /*# sourceMappingURL=navbar.css.map */
