--- a/frontend/src/styles/sass/_global.sass
+++ b/frontend/src/styles/sass/_global.sass
@@ -32,6 +32,12 @@ $orange: #f7bd00
 @mixin box-shadow($horizontalOffset: 2px, $vertialOffset: 2px, $blur: 4px, $spread: -4px, $color: $black)
     box-shadow: $horizontalOffset $vertialOffset $blur $spread $color !important
 
+.default-border
+    @include border()
+
+.max-width
+    width: 100%
+
 .link
     text-decoration: none
 
