--- a/frontend/src/styles/text.css
+++ b/frontend/src/styles/text.css
@@ -1,3 +1,11 @@
+.default-border {
+  border: 1px solid #000 !important;
+}
+
+.max-width {
+  width: 100%;
+}
+
 .link {
   text-decoration: none;
 }
@@ -29,6 +37,11 @@ a {
 .red-text-xl {
   color: #f00;
   font-size: 10rem !important;
+}
+
+.divider-header {
+  font-size: 4rem !important;
+  color: #f00;
 }
 
 /*# sourceMappingURL=text.css.map */
