refactor category page

--- a/frontend/src/styles/sass/text.sass
+++ b/frontend/src/styles/sass/text.sass
@@ -10,3 +10,6 @@ $header-text-size: 4rem
 .divider-header
     font-size: $header-text-size !important
     color: global.$red
+
+.center-text
+    text-align: center
