--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -34,6 +34,10 @@ a {
   display: inline;
 }
 
+.no-margin {
+  margin: 0;
+}
+
 .left-align-box {
   display: flex !important;
   flex-direction: row;
