--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -34,6 +34,10 @@ a {
   display: inline;
 }
 
+.no-margin {
+  margin: 0;
+}
+
 .white-inverse {
   background-color: #fff !important;
   color: #f00 !important;
