--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -34,6 +34,10 @@ a {
   display: inline;
 }
 
+.no-margin {
+  margin: 0;
+}
+
 .full-height-container {
   display: flex !important;
   flex-direction: column;
