--- a/frontend/src/styles/sass/_global.sass
+++ b/frontend/src/styles/sass/_global.sass
@@ -6,7 +6,7 @@ $blue: #00f
 $grey: #F4F6F9
 $orange: #f7bd00
 
-@mixin border-radius($borderRadius: 50%) 
+@mixin border-radius($borderRadius: 50%)
     border-radius: $borderRadius !important
 
 @mixin width($width: 100%)
@@ -50,14 +50,17 @@ h2,h3,h4,h5,h6, p
 a
     text-decoration: none
 
-.full-height 
+.full-height
     height: 100%
 
 .no-bottom-padding
     padding-bottom: 0
-    
+
 .inline-display
     display: inline
 
 .no-margin
     margin: 0
+
+.align-top
+    vertical-align: top
