--- a/frontend/src/styles/image.css
+++ b/frontend/src/styles/image.css
@@ -38,12 +38,25 @@ a {
   margin: 0;
 }
 
+.align-top {
+  vertical-align: top;
+}
+
 .modal-image {
   display: inline !important;
   object-fit: fill;
   height: 8rem;
   width: 8rem !important;
   border-radius: 25%;
+}
+
+.image {
+  margin: 1rem 0;
+  height: 50vh !important;
+  width: 40vw !important;
+  object-fit: fill !important;
+  border: 2px solid #f00 !important;
+  box-shadow: 0px 8px 4px -4px #000 !important;
 }
 
 /*# sourceMappingURL=image.css.map */
