--- a/frontend/src/styles/item.css
+++ b/frontend/src/styles/item.css
@@ -38,19 +38,8 @@ a {
   margin: 0;
 }
 
-.flex-child {
-  flex: 1 !important;
-}
-.flex-child:first-child {
-  margin-right: 2rem;
-}
-
-.image {
-  height: 50vh !important;
-  width: 40vw !important;
-  object-fit: fill !important;
-  border: 2px solid #f00 !important;
-  box-shadow: 0px 8px 4px -4px #000 !important;
+.align-top {
+  vertical-align: top;
 }
 
 .item-desc {
@@ -58,18 +47,8 @@ a {
   text-align: center;
 }
 
-.red-header {
-  color: #f00;
-}
-
 .decimal-cost {
-  vertical-align: top;
   font-size: 2.5rem;
-}
-
-.small-plus {
-  vertical-align: top;
-  font-size: 1.5rem;
 }
 
 /*# sourceMappingURL=item.css.map */
