--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -38,6 +38,10 @@ a {
   margin: 0;
 }
 
+.align-top {
+  vertical-align: top;
+}
+
 .full-height-container {
   display: flex !important;
   flex-direction: column;
