add navbar to each page

--- a/frontend/src/styles/sass/form.sass
+++ b/frontend/src/styles/sass/form.sass
@@ -1,4 +1,9 @@
 @use "_global.sass" as global
+@use "./text" as text
 
 .form-control
     width: 30%
+
+.default-quantity
+    display: inline !important
+    padding: 0 !important
