--- a/frontend/src/styles/form.css
+++ b/frontend/src/styles/form.css
@@ -42,8 +42,27 @@ a {
   vertical-align: top;
 }
 
+.red-text-xl {
+  color: #f00;
+  font-size: 10rem !important;
+}
+
+.divider-header {
+  font-size: 4rem !important;
+  color: #f00;
+}
+
+.center-text {
+  text-align: center;
+}
+
 .form-control {
   width: 30%;
+}
+
+.default-quantity {
+  display: inline !important;
+  padding: 0 !important;
 }
 
 /*# sourceMappingURL=form.css.map */
