--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -4,8 +4,8 @@
     @include global.flex($justify-content: flex-end, $grow: 1)
     margin-bottom: 1rem
 
-.box
-    padding: 1rem 0
+.no-padding
+    padding: 0 !important
 
 .header
     text-align: center
