remove box class

--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -42,6 +42,10 @@ a {
   vertical-align: top;
 }
 
+.top-padding {
+  padding-top: 2rem;
+}
+
 .left-align-box {
   display: flex !important;
   flex-direction: row;
