--- a/frontend/src/styles/image.css
+++ b/frontend/src/styles/image.css
@@ -42,6 +42,10 @@ a {
   vertical-align: top;
 }
 
+.top-padding {
+  padding-top: 2rem;
+}
+
 .modal-image {
   display: inline !important;
   object-fit: fill;
