--- a/frontend/src/styles/item.css
+++ b/frontend/src/styles/item.css
@@ -42,6 +42,10 @@ a {
   vertical-align: top;
 }
 
+.top-padding {
+  padding-top: 2rem;
+}
+
 .item-desc {
   font-size: 1.5rem;
   text-align: center;
