--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -42,6 +42,10 @@ a {
   vertical-align: top;
 }
 
+.top-padding {
+  padding-top: 2rem;
+}
+
 .navbar-brand h1 {
   display: inline !important;
   color: #f00;
