update local storage functions

--- a/frontend/src/styles/button.css
+++ b/frontend/src/styles/button.css
@@ -46,6 +46,10 @@ a {
   padding-top: 2rem;
 }
 
+.top-bottom-padding {
+  padding: 1rem 0;
+}
+
 .white-inverse {
   background-color: #fff !important;
   color: #f00 !important;
