--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -46,6 +46,10 @@ a {
   padding-top: 2rem;
 }
 
+.top-bottom-padding {
+  padding: 1rem 0;
+}
+
 .left-align-box {
   display: flex !important;
   flex-direction: row;
@@ -129,6 +133,12 @@ a {
 
 .modal-details .modal-item {
   border-bottom: 1px solid #000;
+  padding: 1rem 0;
+  display: flex !important;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 0;
 }
 .modal-details h2 {
   margin: 0 1rem;
