--- a/frontend/src/styles/item.css
+++ b/frontend/src/styles/item.css
@@ -46,6 +46,10 @@ a {
   padding-top: 2rem;
 }
 
+.top-bottom-padding {
+  padding: 1rem 0;
+}
+
 .item-desc {
   font-size: 1.5rem;
   text-align: center;
