--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -61,6 +61,9 @@
 .modal-details
     .modal-item
         border-bottom: 1px solid global.$black
+        padding: 1rem 0
+        @include global.flex($justify-content: space-between, $align-items: center)
+        
     h2
         margin: 0 1rem
         font-size: 2rem
