add checkout button

--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -68,3 +68,7 @@
         margin: 0 1rem
         font-size: 2rem
         display: inline
+
+.modal-footer
+    @include global.flex($justify-content: center, $align-items: flex-start)
+    
