--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -146,4 +146,12 @@ a {
   display: inline;
 }
 
+.modal-footer {
+  display: flex !important;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  flex-grow: 0;
+}
+
 /*# sourceMappingURL=box.css.map */
