--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -72,3 +72,7 @@
 .modal-footer
     @include global.flex($justify-content: center, $align-items: flex-start)
     
+
+.center
+    @include global.flex($justify-content: center, $align-items: center )
+    
