--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -154,4 +154,12 @@ a {
   flex-grow: 0;
 }
 
+.center {
+  display: flex !important;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 0;
+}
+
 /*# sourceMappingURL=box.css.map */
