--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -115,7 +115,7 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400;
+  width: 35%;
   background-color: #fff;
   border: 2px solid #000 !important;
   box-shadow: 2px 4px 4px -4px #f00 !important;
@@ -136,9 +136,9 @@ a {
   padding: 1rem 0;
   display: flex !important;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  flex-grow: 0;
+  flex-grow: 1;
 }
 .modal-details h2 {
   margin: 0 1rem;
