--- a/frontend/src/styles/sass/image.sass
+++ b/frontend/src/styles/sass/image.sass
@@ -14,3 +14,6 @@
     object-fit: fill !important
     @include global.border($size: 2px, $color: global.$red)
     @include global.box-shadow($horizontalOffset: 0px, $vertialOffset: 8px, $color: global.$black)
+
+.fill
+    object-fit: fill !important
