--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -50,6 +50,10 @@ a {
   padding: 1rem 0;
 }
 
+.horizontal-margin {
+  margin: auto 1rem !important;
+}
+
 .left-align-box {
   display: flex !important;
   flex-direction: row;
