--- a/frontend/src/styles/icon.css
+++ b/frontend/src/styles/icon.css
@@ -50,6 +50,10 @@ a {
   padding: 1rem 0;
 }
 
+.horizontal-margin {
+  margin: auto 1rem !important;
+}
+
 .icon {
   color: #f00;
   margin: 0 2rem;
@@ -66,6 +70,10 @@ a {
 
 .orange {
   color: #f7bd00;
+}
+
+.red {
+  color: #f00;
 }
 
 /*# sourceMappingURL=icon.css.map */
