--- a/frontend/src/styles/image.css
+++ b/frontend/src/styles/image.css
@@ -50,6 +50,10 @@ a {
   padding: 1rem 0;
 }
 
+.horizontal-margin {
+  margin: auto 1rem !important;
+}
+
 .modal-image {
   display: inline !important;
   object-fit: fill;
