refacotring price form

--- a/frontend/src/styles/sass/item.sass
+++ b/frontend/src/styles/sass/item.sass
@@ -1,8 +1,9 @@
 @use "_global.sass" as global
+@use "./text" as text
 
 .item-desc
     font-size: 1.5rem
     text-align: center
     
 .decimal-cost
-    font-size: 2.5rem
+    font-size: text.$header-text-size / 1.5
