--- a/frontend/src/styles/item.css
+++ b/frontend/src/styles/item.css
@@ -54,13 +54,27 @@ a {
   margin: auto 1rem !important;
 }
 
+.red-text-xl {
+  color: #f00;
+  font-size: 10rem !important;
+}
+
+.divider-header {
+  font-size: 3rem !important;
+  color: #f00;
+}
+
+.center-text {
+  text-align: center;
+}
+
 .item-desc {
   font-size: 1.5rem;
   text-align: center;
 }
 
 .decimal-cost {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 /*# sourceMappingURL=item.css.map */
