--- a/frontend/src/styles/sass/form.sass
+++ b/frontend/src/styles/sass/form.sass
@@ -2,7 +2,10 @@
 @use "./text" as text
 
 .form-control
-    width: 30%
+    width: 20% 
+
+.form-control-sm
+    width: 10% 
 
 .default-quantity
     display: inline !important
