--- a/frontend/src/styles/image.css
+++ b/frontend/src/styles/image.css
@@ -50,6 +50,10 @@ a {
   padding: 1rem 0;
 }
 
+.top-bottom-margin {
+  margin: 1rem 0 !important;
+}
+
 .horizontal-margin {
   margin: auto 1rem !important;
 }
