--- a/frontend/src/styles/sass/_global.sass
+++ b/frontend/src/styles/sass/_global.sass
@@ -71,5 +71,8 @@ a
 .top-bottom-padding
     padding: 1rem 0
 
+.top-bottom-margin
+    margin: 1rem 0 !important
+
 .horizontal-margin
     margin: auto 1rem !important
