--- a/frontend/src/styles/icon.css
+++ b/frontend/src/styles/icon.css
@@ -58,6 +58,20 @@ a {
   margin: auto 1rem !important;
 }
 
+.red-text-xl {
+  color: #f00;
+  font-size: 10rem !important;
+}
+
+.divider-header {
+  font-size: 3rem !important;
+  color: #f00;
+}
+
+.center-text {
+  text-align: center;
+}
+
 .icon {
   color: #f00;
   margin: 0 2rem;
@@ -66,6 +80,10 @@ a {
 .small-icon {
   color: #000;
   margin: 0 0.5rem;
+}
+
+.big-icon {
+  font-size: 3rem !important;
 }
 
 .caret {
